--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <application
-        android:label="cobradorlp"
+        android:label="Cobrador LP"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
