--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,7 @@ dependencies:
   video_player: ^2.10.0
   share_plus: ^12.0.0
   open_filex: ^4.3.0
+  local_auth: ^2.3.0
 
   # ML Kit para detección de rostros y documentos
   google_mlkit_face_detection: ^0.11.1
